                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2020-12-04
 * Fix timezone formatting bug in wing.vue.js format_datetime().

2020-11-30
 * Added an EmailAllUsers wingman job.

2020-11-23
 * Added wing.format_datetime() to wing.vue.js.

2020-11-21
 * luxon-date-time component in wing.vue.js now accepts date-disabled-fn property to disable specific dates.
 * wing.format_date() in wing.vue.js now correctly places a comma after the day.

2020-11-20
 * Wing::Rest::generate_relationship() now has a new option in named_options called ranged. This allows you to specify _start_name_of_field and _end_name_of_field in your query params, which will search >= name_of_field and <= name_of_field on that relationship.

2020-11-19
 * Expose ip_address field to describe() method which can be useful to lock some requests to specific IP addresses.

2020-11-18
 * Older browsers don't support the ||= operator, so removing it from wing.vue.js.
 * Enabled decade buttons on the luxon date time picker.

2020-11-17
 * Added format_date(), format_timeago(), date2luxon() in wing.vue.js.
 * Depricated the datetime and timeago filters in wing.vue.js.
 * Added the <luxon-date-time> component in wing.vue.js.
 * Depricated the <date-time> component in wing.vue.js.

2020-11-15
 * Emit change event for wing-select and wing-select-new components in wing.vue.js.
 * Some bug fixes in wing class --add and --template templates.

2020-11-11
 * Handle warnings even when properties are directly injected into a wing object in wing.vue.js.
 * Fix: wing.vue.js displays the Add a Comment form, even if the user isn't logged in. #32

2020-11-09
 * Removed "Last Login" from profile template since that is hidden info.
 * Made long URLs in comments wrap so they don't make weird scroll bars.
